vlib/v/checker/tests/non_const_match_range_err.vv
const end = 10

start := 1

match 5 {
	start...end {
		println(start)
	}
	else {}
}

a := match 5 {
	start...end {
		0
	}
	else {
		1
	}
}
println(a)
